# Manus

./: .env.example  .gitignore  Dockerfile  README.md  agent_graph.py  agent_state.py  deep_research_config.py  deep_research_graph.py  deep_research_state.py  docker-compose.yml  llm_factory.py  main.py  prompts.py  pyproject.toml  router.py  seedbox_executor.py  verify_file_manager.py  verify_modules.py  verify_workflow.py
agents/: swe_agent.py
hitl/: __init__.py  breakpoints.py  cli_interface.py  handler.py  interactive_feedback.py  takeover_mode.py
middleware/: __init__.py  deepagents_setup.py  eviction_handler.py
nodes/: __init__.py  ask_human_executor.py  bash_executor.py  browser_executor.py  consolidator.py  crawl_executor.py  data_analysis_executor.py  document_executor.py  editor_executor.py  file_manager_executor.py  filesystem_executor.py  memory_manager.py  planner.py  planning_executor.py  planning_manager.py  prompt_enhancer.py  reflection.py  report_writer.py  research_planner.py  schema.py  search_executor.py  search_summarize.py  subagent_executor.py
skills/: browser_automation.py  data_analyzer.py  document_skill.py  file_manager.py  manager.py
tests/: check_memory_setup.py  test_browser_automation.py  test_data_analyzer.py  test_deep_research.py  test_deepagents_integration.py  test_file_manager.py  test_graph.py  test_hitl.py  test_planning_manager.py  test_prompt_enhancer.py  test_seedbox.py
tools/: __init__.py  ask_human.py  browser_use.py  crawl4ai_tool.py  file_operators.py  planning_tool.py  str_replace_editor.py
(+12 files in other folders)
